blue underline shows, needs some fixin

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="./css/base.css" media="screen" title="no title">
     <link rel="stylesheet" href="./css/navbarV1.css" media="screen" title="no title">
     <link rel="stylesheet" href="./css/navbarV2.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./css/navbarV3.css" media="screen" title="no title">
+
     <title>Example Nav Bars</title>
   </head>
   <body>
     <section id="home">
       <div class="image home">
+        <!-- FIRST NAV EXAMPLE -->
         <nav class="nav-v1 nav-size">
           <div class="logo"><i class="fas fa-shield-alt fa-2x"></i>Blackshields</div>
           <div class="nav-links-container">
@@ -38,8 +41,22 @@
             </ul>
           </div>
         </div>
+        <!-- THIRD NAV EXAMPLE -->
+        <div class="nav-v3 nav-size">
+          <div class="logo"><i class="fas fa-shield-alt fa-2x"></i>Blackshields</div>
+          <div class="nav-links-container">
+            <ul>
+              <li><a class="cool-link" href="#home">Home</a></li>
+              <li><a class="cool-link" href="#2">link 2</a></li>
+              <li><a class="cool-link" href="#3">link 3</a></li>
+              <li><a class="cool-link" href="#4">link 4</a></li>
+              <li><button class="dropdown-button">dropdown</button></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
+
     <section id="2" class="image section2">LINK 2</section>
     <section id="3" class="image section3">LINK 3</section>
     <section id="4" class="image section4">LINK 4</section>
