--- a/navbar3.html
+++ b/navbar3.html
@@ -18,12 +18,14 @@
         <!-- THIRD NAV EXAMPLE -->
         <div class="nav-v3 nav-size">
           <div class="logo"><i class="fas fa-shield-alt fa-2x"></i>Blackshields</div>
+          <div style="color: #ffffff; font-size: 28px; position: relative;">work in progress</div>
+
           <div class="nav-links-container">
             <ul>
-              <li><a class="cool-link" href="#home">Home</a></li>
-              <li><a class="cool-link" href="#2">link 2</a></li>
-              <li><a class="cool-link" href="#3">link 3</a></li>
-              <li><a class="cool-link" href="#4">link 4</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#2">link 2</a></li>
+              <li><a href="#3">link 3</a></li>
+              <li><a href="#4">link 4</a></li>
               <li><button class="dropdown-button">dropdown</button></li>
             </ul>
           </div>
